@startuml
'https://plantuml.com/class-diagram

hide methods

class Company {
-designation
}


class Containers {
-x
-y
-z
-containerNumber
-checkDigit
-isoCode
-payLoad
-tare
-gross
-weight
}

class CargoManifest {
-listOfContainers
-ratio
-date
-mmsiCode
-id
-numberOfContainers
-destination
}

class Ship {
-mmsiCode
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-draft
-name
-vesselTypeId
-length
-width
-capacity
}



class Ports {
-identification
-name
}

class Truck {

}

class Warehouse {
-identification
-name
}

class Country {
-name
-continent
}


class ShipLocation {
-baseDateTime
-latitude
-longitude
-sog
-cog
-heading
-position
-transceiver
}

CargoManifest "*" -- "1" Ports : delivered at >
CargoManifest "*" -- "1" Warehouse : delivered at >

Company "1"--"1..*" Ship: own >
Company "1"--"1..*" Truck: own >
Company "1"--"1..*" Ports: have >

Containers "1..*"--"1..*" CargoManifest: related to >
Containers "0..*"--"1" Ports: store >
Containers "0..*"--"1" Warehouse: store >

PlaceLocation "*" -- "1" Country : placed in >

Ports "1" -- "1" PlaceLocation : located at >

Ship "1"---"1..*" Containers : transport >
Ship "0..*"--"1" Ports: dock >
Ship "1" -- "1..*" ShipLocation : has >

Truck "1"--"1..*" Containers : transport >
Truck "0..*"--"1" Warehouse: park >

Warehouse "1" -- "1" PlaceLocation : located at >

@enduml